@@ -71,6 +71,11 @@ Several options can be used to adjust handling of duplicate files.
   Imports multiple files in parallel. This may be faster.
   For example: `-J4`  
 
+* `--json`
+
+  Enable JSON output. This is intended to be parsed by programs that use
+  git-annex. Each line of output is a JSON object.
+
 # CAVEATS
 
 Note that using `--deduplicate` or `--clean-duplicates` with the WORM
