@@ -6,6 +6,7 @@ git-annex (6.20160115) UNRELEASED; urgency=medium
   * Force output to be line-buffered, even when it's not connected to the
     terminal. This is particuarly important for commands with --batch
     output, which was not always being flushed at an appropriate time.
+  * add, import: Support --json output.
 
  -- Joey Hess <id@joeyh.name>  Fri, 15 Jan 2016 14:05:01 -0400
 
